Version Update gICS v2023.1.3